# ChangeLog for app-misc/byobu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/byobu/ChangeLog,v 1.71 2013/12/02 09:24:16 radhermit Exp $

*byobu-5.66 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.66.ebuild:
  Version bump.

*byobu-5.65 (23 Nov 2013)

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.65.ebuild:
  Version bump.

*byobu-5.64 (12 Nov 2013)

  12 Nov 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.64.ebuild:
  Version bump.

  20 Oct 2013; Tim Harder <radhermit@gentoo.org> -byobu-5.49.ebuild,
  -byobu-5.55.ebuild, -byobu-5.56.ebuild, -byobu-5.58.ebuild,
  -byobu-5.59.ebuild:
  Remove old.

*byobu-5.61 (20 Oct 2013)

  20 Oct 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.61.ebuild:
  Version bump.

*byobu-5.60 (26 Sep 2013)

  26 Sep 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.60.ebuild:
  Version bump.

*byobu-5.59 (20 Sep 2013)

  20 Sep 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.59.ebuild:
  Version bump.

*byobu-5.58 (16 Sep 2013)

  16 Sep 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.58.ebuild:
  Version bump.

*byobu-5.56 (27 Aug 2013)

  27 Aug 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.56.ebuild:
  Version bump.

*byobu-5.55 (16 Aug 2013)

  16 Aug 2013; Tim Harder <radhermit@gentoo.org> -byobu-5.39.ebuild,
  -byobu-5.41.ebuild, -byobu-5.41-r1.ebuild, -byobu-5.43.ebuild,
  -byobu-5.45.ebuild, -byobu-5.47.ebuild, +byobu-5.55.ebuild:
  Version bump and remove old.

*byobu-5.49 (30 Jul 2013)

  30 Jul 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.49.ebuild:
  Version bump.

*byobu-5.47 (21 Jul 2013)

  21 Jul 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.47.ebuild:
  Version bump.

*byobu-5.45 (16 Jul 2013)

  16 Jul 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.45.ebuild:
  Version bump.

*byobu-5.43 (05 Jun 2013)

  05 Jun 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.43.ebuild:
  Version bump.
