@@ -6,21 +6,23 @@ DIST byobu_5.61.orig.tar.gz 630523 SHA256 cecff76fd666ebd76c6fe002b54f9f17a4901c
 DIST byobu_5.64.orig.tar.gz 631359 SHA256 c6f61254e9857ed4b62be76443f174dd823b7b179a0e68f328db2ae1c76ed121 SHA512 b214ee6015145cd095eee3d030e051c3d42673942b7390d3da11bf83a9c8161ca5472a38033d166fe66a90592f2012e9635383871ea99e873309781ac8640c43 WHIRLPOOL 4300de3c2aef3306bccc385548a7ef8c329ad6966cc3499222e268be954be938a6e41709d41bd88ca81272b71aa7ada4162342ea8644789cca7c95de8b814b94
 DIST byobu_5.65.orig.tar.gz 631451 SHA256 68315020d4e1bbe98f3e4d805343250891eb08b441e415b527cef0b32836e873 SHA512 6daf0f2d8d01ece6db7386a2389549ab962fd09f073b066e08b8fb391ac3a82f6ea21f66e9f789f8cf574bc04a6ac3f4f4250e3220cc778448f0fb5a636df88f WHIRLPOOL a44b64f46760c366868b7608fa3ce8551a239803b271b0349b58081e0640f23ed2bc4ea1178dd7e7a9ca9a35172ba19434783b75173c61b6664871a4993cb4c7
 DIST byobu_5.66.orig.tar.gz 632591 SHA256 73e37396710dd7520d717af77055dfa5bdf97770912bb4df8dae2094d6c47a08 SHA512 f3ae4ba9c8c2448dd135e85a05ddbd17585583f52dc49aa8bce9ff4b4f7bc45bd52e6400c3204e0a7bd1a2cc18e3db53e9e480ec196e3d0ab29ed3cc0b192381 WHIRLPOOL b960072e58304ea0b0114e282be1e611b304c371532a1a875a8b9a02804cdc285881d7197d45cb79bb2d08c8aeacffb71ed86ba240cb31df5137e227ce0aaf1e
+DIST byobu_5.67.orig.tar.gz 632676 SHA256 067992a2616b5b5fb426235b5e530d2cecce6a102a55543ffac3ebb6949e297b SHA512 e8f7cdf903295ab8245598db77375870f18e35bbdacf70d6698e25fcfaa014e7f949a07febf8c8477f8737aa4ff657f971d54c573c6ea068c25269f7224c254a WHIRLPOOL 1416dfe09da113565f6eaa5219fbea65eebfb61d319ec4bf82f5b9f2f85954b132b6f396cb604ca9a24561bf87ad4150582147c19a6ba43d2fe854e6206d1017
 EBUILD byobu-5.60.ebuild 1051 SHA256 07f67bfc0f770e7732753417dcd98f50984b95d27faa22e081d75838cf2ccb21 SHA512 1aa78ba6051796f9709b647a8b650cd05b4c288accc2115f184f21443f6d4ea9973366fc63ff07867d671915ce3539822829ac21f227b66af21eb8190f56367f WHIRLPOOL 820de21521c94f0634712719d81e98972c4e437c7c9bb9177f43b6939f30a4a2b731d8bd671c8b0aa5ac63adcecf242a9535e0dfae8201e2487f8b82598a6d35
 EBUILD byobu-5.61.ebuild 1051 SHA256 14bf626119e828376055f1afa2ee81bfaf1b63dd240ebb197b4d6b692c7a82ac SHA512 bcb8bcf72acad1873f480001e833d4831bf54a7b3b923d4ce2875c8bc0453e7627eea1b5d993690a8900260529dc31b8c8a8b1b9275e8c6b6707282be1db7f86 WHIRLPOOL 013b06496994abb7a529e8abaa916128bf18a146fd4abedb1f4deaf7097bb0365365c340150369c2cbe4aee18a6bb706c69a2735a9516a78be9680a2ecd8db29
 EBUILD byobu-5.64.ebuild 1051 SHA256 3b91329dc3f840f4be1057ae9ac1913d69d297fa45419bdb2ee9e825fffe8f7d SHA512 c97df714a76537d95ea0389f0c64aacc71e88449d085ec1378e307b0df6e8b502a8ade96deb0a859699ed38eb6dd2c87d9d91f8851cd444775dd690db1e90c7a WHIRLPOOL 39c893855b414d3b295a04c7169145743d32bc8ef9ac227609a1a4391e5ac5c2b8b35dda3f42c7df39896871e62aa2e3ff6fe9db984a279415e4dd327e684b42
 EBUILD byobu-5.65.ebuild 1051 SHA256 9eb71fae2b18459456ac1ab247b228b9f48e433456bbdb26f3015c4c33501034 SHA512 0b420a9bc8b184a94e2477a4eba2662814ed8ffa4297d4aa62cb69290d94cf6f962e5c6751b2525024a514dbb9078afa712701a84cf821a5631641a05b215853 WHIRLPOOL 44bfe23a99b9e61e04ed8011742eab241b772aaae357f0462a406abf64548acba7d71b8d4c11555b9642abad4fa0ad8d19fcd9b840cbe90d689dbe9c9c4d3c58
 EBUILD byobu-5.66.ebuild 1051 SHA256 87ff62454940f8e0b4f3466857d43013a13846fbea556ab677bfeb5588596d12 SHA512 3fd8ad69b972f81e4f819849d698e94a4a6951fdde394247feb95ccf0067f01ef4f015176949cf84d9a31be01e8b9e50611f6f74615b56770de2761f435ede82 WHIRLPOOL e6bbfddedd07a9dd8a8a926bdf2e1d2b97feead35704dd24425b24c4ace7bf147422b40f4d3488657596a1554897948c1a0996b23d0c60375adaf9eb4f230da7
-MISC ChangeLog 9251 SHA256 6d91e2ad299aaa2206cca9bb6c59ba87b55f1609a4ac585f5b05fe7967a3fe3e SHA512 6302c234332270b990c4381a6454b82943397bf26c2f976c8183fbd8690608434414b91403a03794f387d0fc8da432a4cf44ded463eac04a97a7d60cc60a1a9f WHIRLPOOL bd6998dc1dbc2feb77d11f46d876628fdb6fd9797664b9a0d3be7672b9b22df5a4f967cd363f02d564cb2b2cf54b672a698b09db570aaaded4d2d8dafcab310b
+EBUILD byobu-5.67.ebuild 1051 SHA256 e5f358fdd55b3f235b88e2ee9207da2a2463f2bbbd3f3d342c125dd7e1a1f1be SHA512 17d776aa18e6917941310fdf1016dca434b424aade95d07d1fbbd28dc2e454742a77d17d200619a630dd85b0d533dcd7d9e84d6d05926f48995dcaf26d00d563 WHIRLPOOL 21282d9933c4b769849e2962e3197532b7f212badb751544072fa556197eba71ae2137ee8fc9adaf962fdddd8f31f0ab43cd42e75305c7e95547e2171b8ef6b0
+MISC ChangeLog 9364 SHA256 07f9611fcd77de52e70c92bd340e855037b8c1953925096a69e74e1d23277801 SHA512 f22709cec5adbf47cf66873a817062596d507dcc86b93063c504894b8f9702f5e54f4ba5b21ff6b219649fc779e36b4c1caa95dc3ae0f1881086af4259ec8986 WHIRLPOOL 4662516804fd1934565b9188efec5b44ea352e9854a8eec17b840a8d421df19bc61266fa062eba381b9363f030aa928b707553f532a301603ef3641766a17037
 MISC metadata.xml 814 SHA256 2893a1b1f1baa5368b5fb29b05455cd6be7f3c3a6baeedfcdc88e9591d67473c SHA512 0dc424578d083bb657747b12c200fc0f2f3a42415eee8587cce94adc5e09e9303ff7bc21c66c9e43a597e68b748f2bd23b8e47786f4c3093421cc7d996338db1 WHIRLPOOL 770a8ff6ef82f44b0773f318d897d14011a2a1b6223627d30baa5cf807a27c4381cef86a41372025014e9cea082d4600ab01834d7ccac2ce8940bf2b61182a26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSnFHDAAoJEEqz6FtPBkyj8y8H/0kf4XuhJfV8Kg93/5fvPylE
-LuCqZObDMVOSqiYBxZL5fsvrShwCwowBNvlMhSHlFwXh/x49jhB95P9KaYHVeUtZ
-Ijy9AWWSCgNe5lXHzs5UYSqQdZntmNEgDStsSWrCIEDHl5D4msOmyYxS0bnWlj3f
-GJ+9xL4gNpTdY0g+oHODSA/SopRamdbK0YtoayInTPiRY6zH0rSDo5Qcxvh6YpT0
-2v0HQWMtJ4Hxs3JntR2ffRxcqwHhjWP5CPtpG40AbBm1ASGAJ8YfWprk2sk+K7At
-4n1L47tlJ9EIuNDjW4FYnRRXGT7TUy91ucdSlkF+kyIsTre3wfPU7trZ0NG5FVg=
-=rF/z
+iQEcBAEBCAAGBQJSpFdRAAoJEEqz6FtPBkyjNbUH/0bH/RHLBjRjF1N9hyXjFjrd
+ClB+9wv3AotK+6ltFILKPthLMQ7y+vMf3OE3lonaeAVqh9gX8grE1M99GtBQ4RTM
+shOe1tk8uR7EmM8Tk8janFbBurkVJ28L3SAEGOIr/X6mk3xcQZ/WU4ET6udA7AWe
+IjZd4NviMNs546QibPHZpChZ60Qf6olX1zNabJ6g6Kt2GIDqbg8oKuaH1uDl83HV
+cSB2Hc5U2OYtyMdS7U3pPubKwB1iZOIfp7deR7ggEqtXQlbNjeKe70Svki31Z4ZZ
+u6JA5O9DvIWUxgPFmlscgf2GoxDkUJNY1yiezTVRs0anw/5HlDOKV+uV0D0WpZc=
+=aXwC
 -----END PGP SIGNATURE-----
